--- a/src/test/resources/config/application-testcontainers.yml
+++ b/src/test/resources/config/application-testcontainers.yml
@@ -8,6 +8,8 @@
 # More information on database containers: https://www.testcontainers.org/modules/databases/
 # ===================================================================
 
+#Export
+
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
