Update library -> bookStatus name

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "10.0.0",
     "@fortawesome/angular-fontawesome": "0.6.1",
     "@fortawesome/fontawesome-svg-core": "1.2.29",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "5.13.1",
     "@ng-bootstrap/ng-bootstrap": "6.1.0",
     "@ngx-translate/core": "12.1.2",
@@ -49,7 +50,7 @@
     "@typescript-eslint/eslint-plugin-tslint": "2.30.0",
     "@typescript-eslint/parser": "2.30.0",
     "autoprefixer": "9.8.4",
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^2.27.4",
     "browser-sync-webpack-plugin": "2.2.2",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
