--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,20 @@
 				<artifactId>properties-maven-plugin</artifactId>
 			</plugin>
 			<!-- jhipster-needle-maven-add-plugin -->
+
+			<!-- CHECK DEPENDENCIES -->
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>5.2.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
