--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,8 @@
 		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
 		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
 		<!-- jhipster-needle-maven-property -->
+		<sonar.organization>manerial</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencyManagement>
