--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -14,18 +14,33 @@ jobs:
             NG_CLI_ANALYTICS: false
         steps:
             - uses: actions/checkout@v2
+              with:
+                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
             - uses: actions/setup-node@v1
               with:
-                  node-version: 12.16.1
-            - uses: actions/setup-java@v1
+                node-version: 12.16.1
+            - name: Set up JDK 11
+              uses: actions/setup-java@v1
               with:
-                  java-version: '11.x'
+                java-version: '11.x'
+            - name: Cache SonarCloud packages
+              uses: actions/cache@v1
+              with:
+                path: ~/.sonar/cache
+                key: ${{ runner.os }}-sonar
+                restore-keys: ${{ runner.os }}-sonar
+            - name: Cache Maven packages
+              uses: actions/cache@v1
+              with:
+                path: ~/.m2
+                key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+                restore-keys: ${{ runner.os }}-m2
             - name: Install node.js packages
               run: npm install
             - name: Run backend test
               run: |
-                  chmod +x mvnw
-                  ./mvnw -ntp clean verify -P-webpack
+                chmod +x mvnw
+                ./mvnw -ntp clean verify -P-webpack
             - name: Run frontend test
               run: npm run test
             - name: Analyze code with SonarQube
@@ -33,6 +48,6 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               run: |
-                  mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Manerial_story_jhipster
+                  mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Manerial_story_jhipster -Dsonar.login=$SONAR_TOKEN
             - name: Package application
               run: ./mvnw -ntp package -Pprod -DskipTests
