--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,6 @@
 
 	<repositories>
 		<!-- jhipster-needle-maven-repository -->
-		<repository>
-			<id>AsposeJavaAPI</id>
-			<name>Aspose Java API</name>
-			<url>https://repository.aspose.com/repo/</url>
-		</repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -342,6 +337,11 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+			<version>1.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
