--- a/.github/workflows/github-ci-develop.yml
+++ b/.github/workflows/github-ci-develop.yml
@@ -60,4 +60,4 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               run: |
-                ./mvnw -ntp org.sonarsource.scanner.maven:sonar-maven-plugin:sonar initialize sonar:sonar -Dsonar.projectKey=Manerial_story_jhipster -Dsonar.login=$SONAR_TOKEN
+                ./mvnw -ntp org.jacoco:jacoco-maven-plugin:prepare-agent initialize sonar:sonar org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Manerial_story_jhipster -Dsonar.login=$SONAR_TOKEN
