--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.coverage.jacoco.xmlReportPaths=target/jacoco/test/jacoco.xml,target/jacoco
 sonar.java.codeCoveragePlugin=jacoco
 sonar.junit.reportPaths=target/test-results/test,target/test-results/integrationTest
 sonar.testExecutionReportPaths=target/test-results/jest/TESTS-results-sonar.xml
-sonar.typescript.lcov.reportPaths=target/test-results/lcov.info
+sonar.javascript.lcov.reportPaths=target/test-results/lcov.info
 
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=src/main/webapp/content/**/*.*, src/main/webapp/i18n/*.js, target/classes/static/**/*.*
