--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ngx-translate/http-loader": "5.0.0",
     "bootstrap": "4.5.0",
     "bootswatch": "4.5.0",
-    "moment": "2.27.0",
+    "moment": "^2.29.4",
     "ng-jhipster": "0.14.0",
     "ngx-cookie-service": "3.0.4",
     "ngx-infinite-scroll": "9.0.0",
@@ -50,7 +50,7 @@
     "@typescript-eslint/eslint-plugin-tslint": "2.30.0",
     "@typescript-eslint/parser": "2.30.0",
     "autoprefixer": "9.8.4",
-    "browser-sync": "^2.27.4",
+    "browser-sync": "^2.27.10",
     "browser-sync-webpack-plugin": "2.2.2",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
@@ -100,7 +100,7 @@
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "webpack-merge": "4.2.2",
-    "webpack-notifier": "1.8.0",
+    "webpack-notifier": "^1.15.0",
     "workbox-webpack-plugin": "5.1.3",
     "write-file-webpack-plugin": "4.5.1"
   },
